# test-executor-rs

./: Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  fly.toml  results.schema.json
src/: junit_xml.rs  main.rs  s3.rs
src/templates/testing-project/: settings.gradle
templates/testing-project/: build.gradle
