[package]
name = "test-executor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
tokio = { version = "1", features = ["full"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
