[package]
name = "test-executor-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-executor-rs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
tokio = { version = "1", features = ["full"] }
serde-xml-rs = "0.6.0"
tempfile = "3.3.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
